--- a/apps/financial_system_web/lib/financial_system_web/templates/transfer/new.html.eex
+++ b/apps/financial_system_web/lib/financial_system_web/templates/transfer/new.html.eex
@@ -1,3 +1,2 @@
-<h1>New Account</h1>
-
-<%= render "form.html", Map.put(assigns, :action, Routes.account_path(@conn, :create)) %>
+<div id="accountId" data-id="<%= @account.id%>"></div>
+<div id="newTransfer"></div>
