--- a/apps/financial_system_web/lib/financial_system_web/templates/transfer/new.html.eex
+++ b/apps/financial_system_web/lib/financial_system_web/templates/transfer/new.html.eex
@@ -1,2 +1,3 @@
-<div id="accountId" data-id="<%= @account.id%>"></div>
+<%= link "Back", to: Routes.account_transfer_path(@conn, :index, @account) %>
+<div id="accountId" data-link="<%= Routes.account_transfer_path(@conn, :index, @account)%>" data-id="<%= @account.id%>"></div>
 <div id="newTransfer"></div>
