feat: Style with tailwindcss

--- a/apps/financial_system_web/assets/css/app.css
+++ b/apps/financial_system_web/assets/css/app.css
@@ -1,3 +1,9 @@
 /* This file is for your main application css. */
 
-@import "./phoenix.css";
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
+
+/* @import "./phoenix.css"; */
