--- a/apps/financial_system_web/lib/financial_system_web/templates/account/edit.html.eex
+++ b/apps/financial_system_web/lib/financial_system_web/templates/account/edit.html.eex
@@ -1,3 +1,3 @@
-<h1>Edit Account</h1>
+<span class="text-2xl">Edit Accounts</span>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.account_path(@conn, :update, @account)) %>
