--- a/apps/financial_system_web/lib/financial_system_web/templates/account/new.html.eex
+++ b/apps/financial_system_web/lib/financial_system_web/templates/account/new.html.eex
@@ -1,3 +1,3 @@
-<h1>New Account</h1>
+<span class="text-2xl">New Accounts</span>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.account_path(@conn, :create)) %>
